Cambio de tema en index

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,137 +1,11 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
-    color: #333;
-}
-
-header {
-    background-color: #007bff;
-    color: white;
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-}
-
-h1, h2 {
-    font-weight: bold;
-}
-
-.molecule-placeholder {
-    width: 200px;
-    height: 200px;
-    margin: 20px auto;
-    background-color: #ccc;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-}
-
-.options button {
-    width: 45%;
-    margin: 5px;
-}
-
-#feedback {
-    font-size: 1.2em;
-    font-weight: bold;
-}
-
-.flip-card-container {
-    perspective: 1000px;
-    display: inline-block;
-    margin: 0 auto;
-}
-
-.flip-card-inner {
-    width: 300px;
-    height: 300px;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-    position: relative;
-}
-
-.flip-card-front,
-.flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.flip-card-front {
-    background-color: #f0f0f0;
-}
-
-.flip-card-back {
-    background-color: #f9f9f9;
-    transform: rotateY(180deg);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#toggle-view-button {
-    display: block;
-    margin: 20px auto;
-    padding: 10px 20px;
-    border: none;
-    background-color: #4caf50;
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-#toggle-view-button:hover {
-    background-color: #45a049;
-}
-
-#toggle-view-button:active {
-    background-color: #3d8b3d;
-}
-
-.flip-card-inner.flipped {
-    transform: rotateY(180deg);
-}
-
-#molecule-viewer-2D {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-}
-
-.color-legend {
-    margin-top: 20px;
-    text-align: center;
-    font-family: Arial, sans-serif;
-}
-
-.color-legend h3 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-}
-
-.color-legend ul {
-    list-style: none;
+    margin: 0;
     padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-.color-legend li {
-    display: inline-block;
-    margin-right: 15px;
-    font-size: 1em;
-    color: #333;
-}
-
-.legend-color {
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    margin-right: 5px;
-    vertical-align: middle;
-    border-radius: 50%;
+main {
+    flex-grow: 1;
 }
