--- a/css/base.css
+++ b/css/base.css
@@ -2,7 +2,7 @@
 #mainPageButton {
     position: fixed;
     top: 20px;
-    right: 20px;
+    left: 20px;
     padding: 10px 20px;
     background-color: #388E3C;
     color: white;
@@ -15,4 +15,10 @@
 
 #mainPageButton:hover {
     background-color: #4CAF50;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
